--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 24
     buildToolsVersion "24.0.2"
     defaultConfig {
-        applicationId "com.dmedov.driveassign"
+        applicationId "com.dmedov.driveassignment"
         minSdkVersion 17
         targetSdkVersion 24
         versionCode 1
