--- a/circle.yml
+++ b/circle.yml
@@ -11,7 +11,7 @@ dependencies:
     - android list sdk --extended
     - echo y | android update sdk --no-ui --all --filter "tools,platform-tools,android-24"
     - echo y | android update sdk --no-ui --all --filter "build-tools-24.0.2"
-    - echo y | android update sdk --no-ui --all --filter "extra-android-m2repository,extra-google-google_play_services,extra-google-m2repository"
+    - echo y | android update sdk --no-ui --all --filter "extra-android-m2repository,extra-google-google_play_services,extra-google-m2repository,sys-img-armeabi-v7a-google_apis-24"
 
 test:
   override:
