--- a/circle.yml
+++ b/circle.yml
@@ -1,7 +1,44 @@
 machine:
-  services:
-    - docker
+   java:
+        version: oraclejdk8
+   environment:
+     ANDROID_HOME: /usr/local/android-sdk-linux
+
+dependencies:
+  pre:
+    - touch app/google-services.json
+    - echo $GOOGLE_SERVICES_JSON > app/google-services.json
+    - android list sdk --extended
+    - echo y | android update sdk --no-ui --all --filter "tools,platform-tools,android-24,android-22"
+    - echo y | android update sdk --no-ui --all --filter "build-tools-24.0.2"
+    - echo y | android update sdk --no-ui --all --filter "extra-android-m2repository,extra-google-google_play_services,extra-google-m2repository,sys-img-armeabi-v7a-google_apis-22"
 
 test:
+  override:
+    - (./gradlew cAT -i):
+        timeout: 1200
+  pre:
+    - android list targets
+    - echo no | android create avd -n emulatorwithgoogleapi22 -t android-22 --abi google_apis/armeabi-v7a
+    - echo 'vm.heapSize=512' >> ~/.android/avd/emulatorwithgoogleapi22.ini
+    - echo 'hw.ramSize=1024' >> ~/.android/avd/emulatorwithgoogleapi22.ini
+    - cat ~/.android/avd/emulatorwithgoogleapi22.ini
+    - echo "no" | emulator64-arm -avd emulatorwithgoogleapi22 -no-audio -no-window :
+        background: true
+        parallel: true
+    - circle-android wait-for-boot
+    - adb shell input keyevent 82
+    - adb shell svc power stayon true
+    - adb shell settings put global window_animation_scale 0
+    - adb shell settings put global transition_animation_scale 0
+    - adb shell settings put global animator_duration_scale 0
+
+  override:
+    - ./gradlew cAT -i
+    - ./gradlew test
+
   post:
-    - ./package.sh
+    - cp -r app/build/outputs $CIRCLE_ARTIFACTS
+    - cp -r app/build/outputs/androidTest-results/ $CIRCLE_TEST_REPORTS
+    - cp -r app/build/reports/coverage/ $CIRCLE_TEST_REPORTS
+    - cp -r app/build/test-results/mockDebug/ $CIRCLE_TEST_REPORTS
